# nv-faiss

./: CMakeLists.txt  README.md
cmake/: Cuda.cmake
cpu/: timer.h
demos/: CMakeLists.txt  LSH.cpp  demo_ivfpq_indexing.cpp  demo_lsh.cpp  demo_sift1M.cpp
gpu/: CMakeLists.txt  GpuAutoTune.cpp  GpuAutoTune.h  GpuFaissAssert.h  GpuIndex.cu  GpuIndex.h  GpuIndexFlat.cu  GpuIndexIVF.cu  GpuIndexIVF.h  GpuIndexIVFFlat.cu  GpuIndexIVFPQ.cu  IndexProxy.cpp  IndexProxy.h  StandardGpuResources.cpp
gpu/impl/: BroadcastSum.cu  Distance.cu  InvertedListAppend.cu  L2Norm.cu  L2Select.cu  RemapIndices.cpp  VectorResidual.cu
gpu/perf/: CMakeLists.txt  CompareFlat.cu  CompareIVFFlat.cu  CompareIVFPQ.cu  CompareIVFPQGrid.cu  IndexWrapper-inl.h  TestUtils.cpp  TestUtils.h
gpu/test/: CMakeLists.txt  demo_ivfpq_indexing_gpu.cpp
gpu/utils/: DeviceMemory.cpp  DeviceMemory.h  DeviceUtils.cpp  DeviceUtils.h  DeviceVector.cuh  MatrixMult.cu  MemorySpace.h  MergeNetworkBlock.cuh  NoTypeTensor.cuh  StackDeviceMemory.cpp  Timer.cpp  Transpose.cuh  WorkerThread.cpp
tests/: CMakeLists.txt
tutorial/cpp/: CMakeLists.txt
